--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -52,7 +52,7 @@
 
                             <tr>
 
-                                <td><div class="enlaces"><ice:outputLink value="registrausuario.xhtml">Soy un usuario</ice:outputLink></div></td>
+                                <td><div class="enlaces"><ice:outputLink value="registrousuario.xhtml">Soy un usuario</ice:outputLink></div></td>
                                 <td><div class="enlaces"><ice:outputLink value="registrarempresa.xhtml">Soy una empresa</ice:outputLink></div></td>
 
                             </tr>
